[gd_scene load_steps=5 format=3 uid="uid://d042qadhulha7"]

[ext_resource type="Script" path="res://scenes/global/hud_levels.gd" id="1_dl8gu"]
[ext_resource type="FontFile" uid="uid://csa321l6atcac" path="res://fonts/Xolonium-Regular.ttf" id="2_lkni4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l1s6t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4eykb"]

[node name="HudLevels" type="Node"]
script = ExtResource("1_dl8gu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.0588235, 0.0745098, 1, 1)

[node name="ScoreLabel" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_l1s6t")
anchors_preset = -1
anchor_left = 0.832
anchor_top = 0.352
anchor_right = 0.832
anchor_bottom = 0.352
offset_left = -197.464
offset_top = -98.096
offset_right = -1.46399
offset_bottom = -20.096
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_4eykb")
text = "Score :
"
vertical_alignment = 1

[node name="Score" type="Label" parent="ScoreLabel"]
layout_mode = 0
offset_left = 113.0
offset_top = 23.0
offset_right = 153.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberLevels" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.835
anchor_top = 0.246
anchor_right = 0.835
anchor_bottom = 0.246
offset_left = -201.92
offset_top = 40.592
offset_right = 18.08
offset_bottom = 77.592
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
text = "level number :
"

[node name="Level" type="Label" parent="NumberLevels"]
layout_mode = 0
offset_left = 218.0
offset_top = 3.0
offset_right = 258.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -302.0
offset_right = -110.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 64
text = "Timer
"

[node name="TimeNum" type="Label" parent="Timer"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 115.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 64

[node name="PauseButton" type="Button" parent="."]
offset_left = 810.0
offset_top = 400.0
offset_right = 932.0
offset_bottom = 451.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 35
text = "Pause
"

[node name="GiveUpButton" type="Button" parent="."]
offset_left = 950.0
offset_top = 400.0
offset_right = 1097.0
offset_bottom = 451.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 35
text = "Give up
"

[node name="LevelSelectButton" type="Button" parent="."]
offset_left = 850.0
offset_top = 500.0
offset_right = 1070.0
offset_bottom = 551.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 35
text = "Select level
"

[node name="PV" type="Label" parent="."]
offset_left = 760.0
offset_top = 300.0
offset_right = 800.0
offset_bottom = 323.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
text = "PV : "

[node name="PVNum" type="Label" parent="PV"]
layout_mode = 0
offset_left = 70.0
offset_right = 110.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("2_lkni4")
theme_override_font_sizes/font_size = 30
text = "0"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_timer_remain_timeout"]
[connection signal="pressed" from="GiveUpButton" to="." method="_on_give_up_button_pressed"]
[connection signal="pressed" from="LevelSelectButton" to="." method="_on_level_select_button_pressed"]
